# others

./: .gitignore  355lan.py  355langet.py  auto_rtklib_conv.bat  config.ini  copier auto v2.cmd  dascam2.py  dc alarmer test.py  excel row.py  folder_size.py  folder_size_1.py  foodie.py  get7z.py  get7zt.py  get7zt2.py  hc12.py  hc12readsei.py  hc12readsei_1.py  hc12readsei_2.1.py  hc12readsei_2.py  hc12readsei_3.py  hc12readsei_4.1.py  hc12readsei_4.py  internet usage.py  ip.txt  kms_forward.py  kms_forward_test.py  lidar getf3.py  lidar getf4.py  lidar save2.py  lidar save3.py  lidar save4.py  lidar_accp.py  lidar_d1.py  lidar_f2.py  lidar_lan_all.py  lidar_lan_all_flyf_1.py  lidar_lan_alll.py  lidar_lan_alll2.py  lidar_lan_alllt.py  (+95 more)
64bit_double_verify/: 64bit_double_verify.ino
64bit_double_verify2/: 64bit_double_verify2.ino
LSlidarr/: lidar.py  lidar_f.py  lidar_f1.py  lidar_f2.py  lidar_p.py  lidar_p1.py  lidar_p2.py  lidar_p3.py  lidar_p4.py  lidar_p5.py  lidar_p7.py  lidar_s.py  lidar_s1.py  lidar_s2.py  open3dtt.py
LSlidarr/C/: CMakeLists.txt  main.cpp
MLX90393/: MLX90393.ino
SIM7080G_PING_Demo/: sim7080g_ping_demo.ino
_9DoF_Razor_M0_Firmware/: _9DoF_Razor_M0_Firmware.ino
acc_logger/: acc_logger.ino
acc_logger2/: acc_logger2.ino
acc_logger3/: acc_logger3.ino
arduino_transfer/: pc_getdata3.py  pc_getdata3b.py  pc_getdata4.py  pc_getdata4b.py  pc_getdata4b_gnss.py
bubble_level/: bubble_level.ino
bubble_level_o/: bubble_level_o.ino
bubble_level_o2/: bubble_level_o2.ino
cam/: lidar_accp.py  lidar_lan_cam.py  my tcp client plot 3.py
(+531 files in other folders)
